--- a/sprip_v.0.0/src/main/resources/templates/index.html
+++ b/sprip_v.0.0/src/main/resources/templates/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">    
+     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <header id="header">
     <div id="header_logo">
-        <a><img src="./img/small_logo.png"><span>SPRIP</span></a>
+        <a><img src="/img/small_logo.png"><span>SPRIP</span></a>
     </div>
     <div id="header_menu">
         <a href = "/reservation/plane">항공권예약</a>
