--- a/sprip_v.0.0/src/main/resources/templates/members/login.html
+++ b/sprip_v.0.0/src/main/resources/templates/members/login.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-<header id="header">
-    <div id="header_logo">
-        <a><img src="./img/small_logo.png"><span>SPRIP</span></a>
-    </div>
-    <div id="header_menu">
-        <a>항공권예약</a>
-        <a>숙소예약</a>
-        <a>여행지검색</a>
-        <a>고객센터</a>
-        <a id="header_login">로그인</a>
-        <a id="header_mypage"><i class="bi bi-person-circle color_icon"></i></a>
-    </div>
-</header> 
+<!-- <header id="header" th:replace="~{fragments/header :: header}"> </header> -->
 <main>
     <div class="page_title">
         <span style="color:#00BEA7">SPRIP </span><span>회원 로그인</span>
@@ -33,14 +21,14 @@
     <hr class="color_line">
     <div id="login_container">
         <div id="login_logo">
-            <img src="./img/logo.png">
+            <img src="/img/logo.png">
             <h1>SPRIP</h1>
         </div>
-        <form id="login_form" >
+        <form id="login_form">
             <input class="color_input" type="text" placeholder="아이디를 입력하세요"><br>
             <input class="color_input" type="password" placeholder="패스워드를 입력하세요"><br>
             <button class="color_button" type="submit">로그인</button>
-            <button class="color_button">회원가입</button><br>
+            <button class="color_button" th:onclick="|location.href='@{/members/register}'|" type="button" >회원가입</button><br>
             <a>아이디나 패스워드를 잊으셨나요?<i class="bi bi-arrow-right-short" style="color:#00BEA7;"></i></a>
         </form>
     </div>
