--- a/sprip_v.0.0/src/main/resources/templates/qna/service.html
+++ b/sprip_v.0.0/src/main/resources/templates/qna/service.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">    
-     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <header id="header">
@@ -60,8 +60,8 @@
                 <span class="qlist_Q">Q</span><span>결제 취소 기간에 대해</span>
                 <i class="bi bi-caret-down-fill color_icon"></i><div style="clear:both"></div>
             </div>  
-            <button class="color_button">1:1 문의하기</button>   
-            <button class="color_button">내가 남긴 문의</button>        
+            <button class="color_button" th:href = "/qna/new">1:1 문의하기</button>   
+            <button class="color_button" th:href = "/qna/ask">내가 남긴 문의</button>        
         </div>
     </div>
 </main>
